# TrainBooster

./: README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
TrainBooster/: __init__.py
tests/: test_trainbooster.py
trainbooster/: __init__.py
